...
  
  @Query private var users: [UserModel]
  
  
  @State private var firstUser: UserModel?
  @State private var loggedIn: Bool = false
    @State var helloStatement: String = "Hello, log in pls!"
    @State private var isModalPresented = false
  
  
  private func fetchUser() {
      if let user = users.first {
          firstUser = user
...
                                Text(helloStatement)
                                    .font(.title2)
                                    .fontWeight(.bold)
                                    .toolbar{
                                        if !loggedIn {
                                            ToolbarItem(placement: .topBarTrailing) {
                                                Button("Log in"){isModalPresented.toggle()}
                                                    .foregroundColor(.white)
                                                .bold()}
                                        }
                                        }
    
                                
...
